<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <com.yunhuakeji.app.widget.SlideShowView
        android:id="@+id/ssv_home_ad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ico_load_big">


    </com.yunhuakeji.app.widget.SlideShowView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_darkgrey"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_home_aim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/d_5"
            android:textColor="@color/color_white"
            android:text="@string/str_home_aim"
            android:background="@drawable/selector_home_back_transparency"/>

        <TextView
            android:id="@+id/txt_home_aimhall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:text="@string/str_home_aimhall"
            android:background="@drawable/selector_home_back_transparency"
            />

        <TextView
            android:id="@+id/txt_home_evaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:background="@drawable/selector_home_back_transparency"
            android:text="@string/str_home_evaluation"/>
    </LinearLayout>
</RelativeLayout>