<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yunhuakeji.app.ui.fragment.ApplyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bleu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_apply"
            android:padding="@dimen/d_10"
            android:textColor="@color/color_white"
            android:textSize="@dimen/s_20" />

        <TextView
            android:id="@+id/txt_apply_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/d_15"
            android:text="@string/str_manage"
            android:visibility="gone"
            android:textColor="@color/color_white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_applay_search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="@dimen/d_8"
        android:layout_marginEnd="@dimen/d_10"
        android:layout_marginStart="@dimen/d_10"
        android:layout_marginTop="@dimen/d_8"
        android:background="@drawable/shape_radius_borde_gray"
        android:drawableStart="@mipmap/ico_search"
        android:textColor="@color/color_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_search"
            android:gravity="center"
            android:textColor="@color/color_darkgrey"
            android:drawableStart="@mipmap/ico_search" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.yunhuakeji.app.view.MyListview
                android:id="@+id/list_apply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d_10"
                android:background="@color/color_white"></com.yunhuakeji.app.view.MyListview>

            <com.yunhuakeji.app.view.MyListview
                android:id="@+id/list_apply_otherapp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d_10"
                android:background="@color/color_white"></com.yunhuakeji.app.view.MyListview>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
