<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_persona_bggray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ly_persona_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bleu"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:padding="@dimen/d_10"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/d_10"
            android:layout_marginTop="@dimen/d_10"
            android:text="@string/str_userinfo_erweima_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/s_20" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/d_5"
        android:layout_marginStart="@dimen/d_15"
        android:layout_marginEnd="@dimen/d_15"
        android:background="@color/color_light_gray">

        <ImageView
            android:id="@+id/img_userinfo_erweima_userphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d_10"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txt_userinfo_erweima_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_15"
            android:layout_toEndOf="@id/img_userinfo_erweima_userphoto"
            android:text="@string/str_username"
            android:textColor="@color/color_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_userinfo_erweima_username"
            android:layout_marginTop="@dimen/d_5"
            android:layout_toEndOf="@id/img_userinfo_erweima_userphoto"
            android:text="@string/str_userinfo_erweima_introduce" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/d_30"
        android:layout_marginEnd="@dimen/d_15"
        android:layout_marginStart="@dimen/d_15"
        android:layout_marginTop="@dimen/d_15"
        android:background="@drawable/shape_rectangular_border"
        android:padding="@dimen/d_10">

        <ImageView
            android:id="@+id/img_erweima_erweima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ico_personal_erweima" />

    </RelativeLayout>

</LinearLayout>
