<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunhuakeji.app.MainActivity">

    <LinearLayout
        android:id="@+id/ly_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangular_border_darkgray"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <!--数据报告-->
        <LinearLayout
            android:id="@+id/ly_home_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/d_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ico_report_normal" />

            <TextView
                android:id="@+id/txt_home_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/d_5"
                android:layout_marginTop="@dimen/d_5"
                android:text="@string/str_home_report" />

        </LinearLayout>
        <!--应用-->
        <LinearLayout
            android:id="@+id/ly_home_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/d_10">

            <ImageView
                android:id="@+id/img_home_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ico_apply_normal" />

            <TextView
                android:id="@+id/txt_home_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/d_5"
                android:layout_marginTop="@dimen/d_5"
                android:text="@string/str_home_apply" />

        </LinearLayout>


        <!--首页-->
        <LinearLayout
            android:id="@+id/ly_home_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/d_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ico_home_pressed" />

            <TextView
                android:id="@+id/txt_home_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/d_5"
                android:layout_marginTop="@dimen/d_5"
                android:textColor="@color/color_bleu"
                android:text="@string/str_home_home" />

        </LinearLayout>


        <!--消息-->
        <LinearLayout
            android:id="@+id/ly_home_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/d_10"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.yunhuakeji.app.view.DragPointView
                android:id="@+id/pointivew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:paddingStart="@dimen/d_5"
                android:layout_marginBottom="-15dp"
                android:layout_marginEnd="-20dp"
                android:textColor="@color/color_white"
               android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/img_home_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ico_message_normal" />

            <TextView
                android:id="@+id/txt_home_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/d_5"
                android:layout_marginTop="@dimen/d_5"
                android:text="@string/str_home_message" />

        </LinearLayout>
        <!--我的-->
        <LinearLayout
            android:id="@+id/ly_home_personal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/d_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ico_personal_normal" />

            <TextView
                android:id="@+id/txt_home_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/d_5"
                android:layout_marginTop="@dimen/d_5"
                android:text="@string/str_home_personal" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ly_home_bottom"
        >

    </android.support.v4.view.ViewPager>

</RelativeLayout>
